fix desgin on mobiles

--- a/src/App.css
+++ b/src/App.css
@@ -78,13 +78,14 @@ th:first-child, td:first-child {
   position: sticky;
   right: 0px;
   z-index: 2;
-  width: 150px;
+  width: 200px;
   color: #000;
   text-align: right;
 }
 tbody th:first-child, td:first-child{
   background-color: rgba(255,255,255,0.8);
 }
+
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
 body{
@@ -123,6 +124,9 @@ thead {
   z-index: 3;
 }
 
+thead tr :not(:first-child){
+  right: 0px;
+}
 .headertable{
   text-align: right;
   color: #fff;
@@ -150,6 +154,14 @@ thead {
   *{
     font-size: 15px !important;
   }
+  #theadTableName{
+
+    width: 150px !important;
+   
+  }
+  th:first-child, td:first-child {
+    width: 150px !important;
+  }
 }
 #theadTableName{
   position: sticky;
@@ -158,8 +170,22 @@ thead {
   text-align: center;
   z-index: 3;
   right: 0px;
-
-  width: 150px;
+  width: 200px;
+ 
+  
+}
+h3{
+  background: linear-gradient(to right, #1a516d, #5DC0CD);
+  border-radius: 10px;
+}
+#theadTableNameDet{
+  position: sticky;
+  top: 10px !important;
+  color: #000;
+  text-align: center;
+  z-index: 3;
+  right: 0px;
+  width: 200px;
   border-radius: 10px;
   background: linear-gradient(to right, #1a516d, #5DC0CD);
 }
